Refactor: refatorando codigo antigo